@@ -1,5 +1,9 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from .wizard import Wizard, StateView, StateTransition, StateAction, Button
+from .wizard import Wizard
+from .wizard import StateView, StateTransition, StateAction, StateReport
+from .wizard import Button
 
-__all__ = ['Wizard', 'StateView', 'StateTransition', 'StateAction', 'Button']
+__all__ = ['Wizard',
+    'StateView', 'StateTransition', 'StateAction', 'StateReport',
+    'Button']
